@@ -1,4 +1,5 @@
 0.05
+ - Update Module::Install to 1.19 version.
 
 0.04 2015-10-22T11:41:11+02:00
  - Improve SEE ALSO section in doc.
